[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Firebase/Sign_in.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Montserrat/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icons/back/outline_arrow_back_black_24dp.png" type="Texture" id=3]
[ext_resource path="res://icons/cog/outline_settings_black_24dp.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-LightItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://icons/back/outline_arrow_back_black_pressed_24dp.png" type="Texture" id=7]
[ext_resource path="res://icons/cog/outline_settings_black_pressed_24dp.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.631373, 0.415686, 0.909804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_color = Color( 0.054902, 0.027451, 0.027451, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.980469, 0.980469, 0.980469, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=6]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=8]
size = 45
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Sign_In" type="Control"]
anchor_right = 2.01
anchor_bottom = 1.998
margin_right = -484.8
margin_bottom = -718.56
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 0.97
margin_bottom = 21.6
color = Color( 1, 0.933333, 0.866667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
margin_left = 141.0
margin_top = 94.0
margin_right = 324.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.631373, 0.415686, 0.909804, 1 )
text = "Sign In"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="UI"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
margin_left = 18.0
margin_top = 198.0
margin_right = 458.0
margin_bottom = 315.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="HBoxContainer" parent="UI/Menu/VBoxContainer"]
margin_right = 440.0
margin_bottom = 46.0
rect_min_size = Vector2( 440, 46 )
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI/Menu/VBoxContainer/Username"]
margin_top = 4.0
margin_right = 145.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username :"
__meta__ = {
"_edit_lock_": true
}

[node name="User_edit" type="LineEdit" parent="UI/Menu/VBoxContainer/Username"]
margin_left = 145.0
margin_right = 395.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 46 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pass" type="HBoxContainer" parent="UI/Menu/VBoxContainer"]
margin_top = 71.0
margin_right = 440.0
margin_bottom = 117.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI/Menu/VBoxContainer/Pass"]
margin_top = 4.0
margin_right = 143.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password  :"
__meta__ = {
"_edit_lock_": true
}

[node name="Pass_edit" type="LineEdit" parent="UI/Menu/VBoxContainer/Pass"]
margin_left = 143.0
margin_right = 393.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 46 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
secret = true
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainerUpper" type="VBoxContainer" parent="UI/Menu"]
margin_left = 143.02
margin_top = 392.755
margin_right = 353.02
margin_bottom = 703.755
rect_min_size = Vector2( 200, 247 )
rect_scale = Vector2( 1, 0.75 )
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="UI/Menu/VBoxContainerUpper"]
margin_right = 210.0
margin_bottom = 100.0
rect_min_size = Vector2( 210, 100 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Submit"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Menu/VBoxContainerUpper"]
margin_top = 140.0
margin_right = 210.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0.00392157, 0.0431373, 1 )
text = "First time?"
align = 1

[node name="Register" type="Button" parent="UI/Menu/VBoxContainerUpper"]
margin_top = 211.0
margin_right = 210.0
margin_bottom = 311.0
rect_min_size = Vector2( 210, 100 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Register"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainerLower" type="HBoxContainer" parent="UI/Menu"]
margin_left = 5.93768
margin_top = 25.3159
margin_right = 465.939
margin_bottom = 81.3159
rect_min_size = Vector2( 460, 56 )
custom_constants/separation = 264
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="TextureButton" parent="UI/Menu/HBoxContainerLower"]
margin_left = 18.0
margin_right = 107.0
margin_bottom = 56.0
rect_min_size = Vector2( 89, 56 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" type="TextureButton" parent="UI/Menu/HBoxContainerLower"]
margin_left = 371.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 89, 56 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="error_msg" type="Label" parent="UI/Menu"]
margin_left = 10.0
margin_top = 323.0
margin_right = 472.0
margin_bottom = 371.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="text_changed" from="UI/Menu/VBoxContainer/Username/User_edit" to="." method="_on_User_edit_text_changed"]
[connection signal="text_changed" from="UI/Menu/VBoxContainer/Pass/Pass_edit" to="." method="_on_Pass_edit_text_changed"]
[connection signal="pressed" from="UI/Menu/VBoxContainerUpper/Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainerUpper/Register" to="." method="_on_Regester_pressed"]
[connection signal="pressed" from="UI/Menu/HBoxContainerLower/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="UI/Menu/HBoxContainerLower/Settings" to="." method="_on_Settings_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
